# flexbar

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
galaxy/: flexbar.pl  flexbar.xml
src/: AdapterLoader.h  Adapters.h  AlignmentAlgorithm.h  AlignmentFilter.h  CMakeLists.txt  Enums.h  Flexbar.cpp  Flexbar.h  FlexbarIO.h  FlexbarTypes.h  LoadAdapters.h  LoadFasta.h  MultiplexedAlignmentFilter.h  MultiplexedInputFilter.h  MultiplexedOutputFilter.h  MultiplexedRead.h  Options.h  OutputFileStruct.h  OutputFiles.h  PairedAlign.h  PairedAlignFilter.h  PairedAlignmentFilter.h  PairedInput.h  PairedInputFilter.h  PairedOutput.h  PairedOutputFilter.h  PairedRead.h  PairedReadBundle.h  QualTrimming.h  SeqAlign.h  SeqAlignAlgo.h  SeqAlignAlgorithm.h  SeqAlignFilter.h  SeqAlignPair.h  SeqInput.h  SeqInputFilter.h  SeqOutput.h  SeqOutputFiles.h  SeqOutputFilter.h  SeqRead.h  (+5 more)
test/: adapters.fasta  adapters1.fasta  adapters2.fasta  adapters_cs.fasta  barcodes.fasta  barcodes_wildcardN.fasta  correct_result_any.csfasta  correct_result_any.csfastq  correct_result_any.fasta  correct_result_any.fastq  correct_result_left.csfasta  correct_result_left.csfastq  correct_result_left.fasta  correct_result_left.fastq  correct_result_left_tail.csfasta  correct_result_left_tail.csfastq  correct_result_left_tail.fasta  correct_result_left_tail.fastq  correct_result_right.csfasta  correct_result_right.csfastq  correct_result_right.fasta  correct_result_right.fastq  correct_result_right_tail.csfasta  correct_result_right_tail.csfastq  correct_result_right_tail.fasta  correct_result_right_tail.fastq  flexbar_test_csfasta.sh  flexbar_test_csfastq.sh  flexbar_test_fasta.sh  flexbar_test_fastq.sh  flexbar_test_zip.sh  flexbar_validate.sh  reads.fasta  reads.fastq  reads.fastq.bz2  reads1.fasta  reads2.fasta  test.csfasta  test.csfastq  test.fasta.bz2
